--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -948,25 +948,25 @@ template class Blob<string>; // 实例化类模板的所有成员
 要注意全部特例化的本质是一个模板实例，而非模板。
 
 全部特例化有两种定义形式：
-1. > template <> 函数或者类的定义语句
-2. > template <> 类模板成员的定义语句
+1. > template <> 函数或者类的实例化语句
+2. > template <> 类模板成员的实例化语句
 
 第1种形式适用于各种模板，而第2种形式只适用于类模板的静态成员、类类型成员和成员模板。
 
 第1种形式中：
-* 函数或者类的定义语句是指原始模板中对应的函数或类的定义语句，其中所有的模板形参都被替换为实参，这些实参也需遵循模板实参的规则。
+* 函数或者类的实例化语句是指原始模板中对应的函数或类的实例化语句，其中所有的模板形参都被替换为实参，这些实参也需遵循模板实参的规则。
 语句中为所有模板形参都提供实参的方式必须要与隐式实例化方式类似，用显式模板实参表或者模板实参推断来提供(和显式模板实参表或者模板实参推断的用法一样，满足省略实参的条件时也可以不提供实参)。
 
 第2种形式中：
 * 第2种形式是只特例化特定成员而不是特例化整个模板。
-  类模板成员的定义语句是指该模板的某个成员的定义语句，就和类类型成员在类外定义一样，我们要在该定义语句的成员名之前加上该类模板名、尖括号`<>`包围的模板实参表和作用域运算符`::`来表示我们是在定义类模板的该特殊实例的成员。
-  > 要注意这种形式中，该成员定义语句中的声明部分(如果是成员模板就是模板声明部分)要与模板中该成员的声明部分一样，否则出错。
+  类模板成员的实例化语句是指该模板的某个成员的实例化语句，就和类类型成员在类外定义一样，我们要在该实例化语句的成员名之前加上该类模板名、尖括号`<>`包围的模板实参表和作用域运算符`::`来表示我们是在定义类模板的该特殊实例的成员。
+  > 要注意这种形式中，该成员实例化语句中的声明部分(如果是成员模板就是模板声明部分)要与模板中该成员的声明部分一样，否则出错。
 
 > 全部特例化也就是代替编译器手动生成一个特殊的实例，和隐式实例化一样，类模板的成员只有在其使用时才被实例化。
 
 当我们==定义或声明一个全部特例化时，编译器会检查是否已存在相同声明的实例的定义，如果已存在，则出错；否则就生成该特殊实例==，该特殊实例的生成规则为：
-* 对于第1种形式，该特殊实例是按全部特例化中的定义语句来生成的。
-* 对于第2种形式，除了全部特例化所指定的特殊成员，该特殊实例的其他成员是按原始模板的定义语句来生成的；对于该全部特例化语句所指定的成员，则使用该语句中的定义语句来生成该成员。
+* 对于第1种形式，该特殊实例是按全部特例化中的实例化语句来生成的。
+* 对于第2种形式，除了全部特例化所指定的特殊成员，该特殊实例的其他成员是按原始模板的定义语句来生成的；对于该全部特例化语句所指定的成员，则使用该语句中的实例化语句来生成该成员。
 
 > 所以，我们如果要使用模板的全部特例化时，必须要在全部特例化定义语句之后才行，否则会导致编译出错。
 
@@ -1019,20 +1019,36 @@ cout << obj3.ob;
 
 部分特例化时，至少要指定一个形参或者类型模板参数包的非只含有包名的扩展，但也不能将模板形参全都指定具体的实参，否则出错。
 
-> 对于没有默认实参的未命名模板形参，则必须要对该形参指定具体实参，否则部分特例化定义时无法在实参表表示该形参。
+> 对于没有默认实参的未命名模板形参，则必须要在模板实参表中对该形参指定具体实参，否则部分特例化定义时无法在实参表表示该形参。
 
 部分特例化的定义形式为：
-> template 未指定实参的模板形参表 类的定义语句
+> template 模板参数列表 模板名 <显式模板实参表> 类体;
 
-部分特例化本质就是一个模板，所以我们必须要在该模板的模板形参表中按原始模板的形参声明顺序，列出原始模板的所有未指定、只指定部分的和扩展的模板形参，不能列出指定了具体实参的形参。该模板形参表也可以有默认实参。
+```c++
+#include <array>
 
-类的定义语句类似全部特例化中的定义语句，是指原始模板中对应的函数或类的定义语句，且必须要在显式实参表中按原始模板的形参声明顺序，列出原始模板的所有模板实参(对于有默认实参的形参，可以省略其实参)，列出规则为：
+// 原始类模板Base
+template<typename T, template<class, std::size_t> typename Cls, int N>
+struct Base;
+
+// 类模板Base的第一种部分特例化
+template<typename T>
+struct Base<T, std::array, 6> {};
+
+// 类模板Base的第二种部分特例化
+template<unsigned S, typename T>
+struct Base<T[S], std::array, 6> {};
+```
+
+> 部分特例化中的模板参数列表的类型顺序以及参数名可以与原始模板不一样，也可以有默认实参，如上面类模板`Base`的第二种部分特例化。
+
+部分特例化中的显式模板实参表中，必须要按原始模板的形参声明顺序，列出原始模板的所有模板实参(对于有默认实参的形参，可以省略其实参)，列出规则为：
 * 对于未指定、只指定部分和扩展的模板形参，则在显式实参表中直接写出该模板形参的名字、指定的部分以及该扩展。
 * 对于已指定具体实参的模板形参，则在表中写上该实参。
 
-> 对于模板参数包来说，在显式实参表中如果不指定具体实参给该参数包，则必须要用其扩展形式，因为参数包只有扩展后才能用。
+> 对于模板参数包来说，在显式模板实参表中如果不指定具体实参给该参数包，则必须要用其扩展形式，因为参数包只有扩展后才能用。
 
-因为部分特例化就是原始模板的一个重载模板，所以当要生成一个实例时，如果该实例中的每个模板实参与该部分特例化中的显式实参表所表示的实参一模一样时(对于类型实参来说，就是要能转换成对应的实参，且转换所需的内容更少，还要该类型实参的主要特性与实例实参相同)，则编译器会优先调用该部分特例化来生成该实例，否则就调用原始模板。
+因为部分特例化就是原始模板的一个重载模板，所以当要生成一个实例时，如果该实例中的每个模板实参与该**部分特例化中的显式模板实参表**所表示的实参一模一样时(对于类型实参来说，就是要能转换成对应的实参，且转换所需的内容更少，还要该类型实参的主要特性与实例实参相同)，则编译器会优先调用该部分特例化来生成该实例，否则就调用原始模板。
 
 > 对于常量、引用和指针类型等特性，主要特性就是指其常量、引用和指针，对于显式实参表中没有显式标注常量、引用或者指针等特性的类型实参，其主要特性就不是该特性。
 > 
