--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -1040,7 +1040,7 @@ template<unsigned S, typename T>
 struct Base<T[S], std::array, 6> {};
 ```
 
-> 部分特例化中的模板参数列表的类型顺序以及参数名可以与原始模板不一样，也可以有默认实参，如上面类模板`Base`的第二种部分特例化。
+> 部分特例化中的模板参数列表的类型、顺序以及参数名可以与原始模板不一样，也可以有默认实参，如上面类模板`Base`的第二种部分特例化。
 
 部分特例化中的显式模板实参表中，必须要按原始模板的形参声明顺序，列出原始模板的所有模板实参(对于有默认实参的形参，可以省略其实参)，列出规则为：
 * 对于未指定、只指定部分和扩展的模板形参，则在显式实参表中直接写出该模板形参的名字、指定的部分以及该扩展。
