--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -178,6 +178,17 @@ template<typename ty, class ty2>
 void prints(ty val, ty2 val2) { }
 ```
 
+类型形参的实参还可以结合一些符号形成一些特殊的形式：
+
+```c++
+template <typename CallableType>
+class FunctionDiff {};
+
+// 定义正确，可以使用括号结合多个类型。
+// 该形式源于functional头文件function的定义。
+FunctionDiff<int(int, int)> g_obj;
+```
+
 ### 10.42 非类型形参
 
 非类型形参在模板形参的声明形式为：
@@ -1042,11 +1053,26 @@ struct Base<T[S], std::array, 6> {};
 
 > 部分特例化中的模板参数列表的类型、顺序以及参数名可以与原始模板不一样，也可以有默认实参，如上面类模板`Base`的第二种部分特例化。
 
-部分特例化中的显式模板实参表中，必须要按原始模板的形参声明顺序，列出原始模板的所有模板实参(对于有默认实参的形参，可以省略其实参)，列出规则为：
+部分特例化中的显式模板实参表中，必须要按原始模板的形参声明顺序，列出原始模板的所有模板参数(对于有默认实参的形参，可以省略其实参)，列出规则为：
 * 对于未指定、只指定部分和扩展的模板形参，则在显式实参表中直接写出该模板形参的名字、指定的部分以及该扩展。
 * 对于已指定具体实参的模板形参，则在表中写上该实参。
 
 > 对于模板参数包来说，在显式模板实参表中如果不指定具体实参给该参数包，则必须要用其扩展形式，因为参数包只有扩展后才能用。
+
+```c++
+#include <functional>
+template <typename CallableType>
+class FunctionDiff;
+
+// 包含模板参数包扩展的部分特例化
+template <typename ResultType, typename... ArgsTypes>
+class FunctionDiff<ResultType(ArgsTypes...)>
+{
+public:
+    virtual void operator()(std::function<ResultType(ArgsTypes ...)>) = 0;
+    virtual ~FunctionDiff() = default;
+};
+```
 
 因为部分特例化就是原始模板的一个重载模板，所以当要生成一个实例时，如果该实例中的每个模板实参与该**部分特例化中的显式模板实参表**所表示的实参一模一样时(对于类型实参来说，就是要能转换成对应的实参，且转换所需的内容更少，还要该类型实参的主要特性与实例实参相同)，则编译器会优先调用该部分特例化来生成该实例，否则就调用原始模板。
 
