--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -181,6 +181,11 @@ void prints(ty val, ty2 val2) { }
 类型形参的实参还可以结合一些符号形成一些特殊的形式：
 
 ```c++
+/**
+ * @brief 用于同调用形式不同实现的函数的比较声明，类似std::function
+ * 
+ * @tparam CallableType 
+ */
 template <typename CallableType>
 class FunctionDiff {};
 
@@ -1061,10 +1066,21 @@ struct Base<T[S], std::array, 6> {};
 
 ```c++
 #include <functional>
+/**
+ * @brief 用于同调用形式不同实现的函数的比较声明，类似std::function
+ * 
+ * @tparam CallableType 
+ */
 template <typename CallableType>
 class FunctionDiff;
 
 // 包含模板参数包扩展的部分特例化
+/**
+ * @brief 抽象基类，用于同调用形式不同实现的函数的比较，使用std::function实现
+ * 
+ * @tparam ResultType 调用形式中的返回类型
+ * @tparam ArgsTypes 调用形式中的各形参
+ */
 template <typename ResultType, typename... ArgsTypes>
 class FunctionDiff<ResultType(ArgsTypes...)>
 {
