--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -1188,11 +1188,9 @@ Cls obj3 = Cls("string");
 ##### 7.4527 重用基类的构造函数
 
 在C++11新标准中，派生类能够重用其直接基类定义的构造函数。
-也就是指该派生类可以生成和其直接基类形参表，初始值列表，函数体都一样的构造函数。
+也就是该派生类可以生成和其直接基类形参表，初始值列表，函数体都一样的构造函数（拷贝控制构造函数除外）。
 
-一个类也只重用其直接基类的构造函数不能重用其他的基类的，包括其虚基类。
-
-类不能重用合成的默认、合成的拷贝和合成的移动构造函数。如果派生类没有直接定义这些构造函数，则编译器将为派生类合成它们。
+一个类也只重用其直接基类的构造函数，不能重用其他的基类的，包括其虚基类。
 
 ###### 7.45271 重用构造函数的形式
 
@@ -1201,11 +1199,68 @@ Cls obj3 = Cls("string");
 
 > 要用作用域运算符显式注明。
 
-对于该直接基类的每个构造函数，按照这些构造函数的声明顺序，编译器会依次生成与之对应的派生类构造函数。换句话说，对于基类的每个构造函数，编译器都在派生类中生成一个和其直接基类形参表，初始值列表，函数体都一样的构造函数。
+对于该直接基类的每个构造函数，按照这些构造函数的声明顺序，编译器会依次生成与之对应的派生类构造函数。换句话说，对于**基类的每个构造函数（拷贝控制构造函数除外），编译器都在派生类中生成一个和其直接基类形参表，初始值列表，函数体都一样的构造函数**。
 这些编译器生成的构造函数形如：
 > 派生类名 直接基类对应构造函数的形参表 直接基类对应构造函数的初始值列表 直接基类对应构造函数的函数体
 
-直接基类的每个构造函数还包括该直接基类自己所重用的构造函数。
+```c++
+#include <iostream>
+// 直接基类
+class Base
+{
+public:
+    Base(const std::string& s) { std::cout << "this is base" << std::endl; }
+    Base(const Base&, int i) { std::cout << "this is base" << std::endl; }
+};
+
+class Derive: public Base
+{
+public:
+    /*
+        生成以下构造函数：
+        Derive(const std::string& s) {std::cout << "this is base" << std::endl;}
+        Derive(const Base&, int i) { std::cout << "this is base" << std::endl; }
+    */
+    using Base::Base;
+};
+```
+
+类不能重用合成的默认、合成的拷贝和合成的移动构造函数，如果派生类没有直接定义这些构造函数，则编译器将为派生类合成它们，但可以重用这些非合成的版本。
+其中对于**非合成的拷贝和移动构造函数**，编译器会在派生类中**生成一个函数体相同，但函数名及形参表都为派生类名的构造函数**。
+```c++
+#include <iostream>
+// 直接基类
+class Base
+{
+public:
+    Base() { std::cout << "default base" << std::endl; }
+    Base(const Base&) { std::cout << "copy base" << std::endl; }
+    Base(Base&&) { std::cout << "move base" << std::endl; }
+};
+
+class Derive: public Base
+{
+public:
+    /*
+        生成以下构造函数：
+        Derive() { std::cout << "default base" << std::endl; }
+        Derive(const Derive&) { std::cout << "copy base" << std::endl; }
+        Derive(Derive&&) { std::cout << "move base" << std::endl; }
+    */
+    using Base::Base;
+};
+
+int main()
+{
+    // 输出default base
+    Derive d1;
+    // 输出copy base
+    Derive d2 = d1;
+    return 0;
+}
+```
+
+> 直接基类的每个构造函数还包括该直接基类自己所重用的构造函数。
 
 > 派生类可以重用多个直接基类的构造函数，只要写上对应基类的using声明就行。
 
