--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -1049,14 +1049,32 @@ struct Base;
 
 // 类模板Base的第一种部分特例化
 template<typename T>
-struct Base<T, std::array, 6> {};
+struct Base<T, std::array, 6>;
 
 // 类模板Base的第二种部分特例化
 template<unsigned S, typename T>
-struct Base<T[S], std::array, 6> {};
+struct Base<T[S], std::array, 6>;
 ```
 
 > 部分特例化中的模板参数列表的类型、顺序以及参数名可以与原始模板不一样，也可以有默认实参，如上面类模板`Base`的第二种部分特例化。
+
+> 部分特例化中的模板参数列表中不能含有默认实参，否则会报错
+
+```c++
+#include <array>
+
+// 原始类模板Base
+template<typename T>
+struct Base;
+
+// 错误，模板参数列表的N不能含有默认实参
+template<typename T, int N = 6>
+struct Base<T[N]>;
+
+// 正确，类模板Base的部分特例化
+template<typename T>
+struct Base<const T>;
+```
 
 部分特例化中的显式模板实参表中，必须要按原始模板的形参声明顺序，列出原始模板的所有模板参数(对于有默认实参的形参，可以省略其实参)，列出规则为：
 * 对于未指定、只指定部分和扩展的模板形参，则在显式实参表中直接写出该模板形参的名字、指定的部分以及该扩展。
