--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -60,7 +60,8 @@ struct Cls { ty data_mem; void prints() { cout << data_mem << " " << int_par << 
 
 和函数形参一样，非参数包的模板形参和函数模板中的非参数包的函数形参都可以有默认实参，它们的规则大部分与普通默认实参的规则一样(比如默认模板实参要放在形参表末尾等)，只有以下的区别：
 * 对于模板形参的默认实参来说：
-  一个模板的声明(包括模板友元的声明语句)和定义之间可以对同一个模板形参有不同的默认实参，但是该模板形参的默认实参只会按照该形参第一个出现的默认实参来决定。
+  一个模板的声明(包括模板友元的声明语句)和定义如果不在同一个文件中，则可以对同一个模板形参有不同的默认实参，但是该模板形参的默认实参只会按照该形参第一个出现的默认实参来决定。
+  如果在同一个文件中，则默认实参只能在该模板第一次出现的语句中(声明或定义语句都可以，也包括模板友元的声明语句)，其他语句都不能出现默认实参。
 * 对于函数形参的默认实参来说：
   不能像普通函数一样可以用多个声明来添加默认实参。
   默认实参只能在该模板第一次出现的语句中(声明或定义语句都可以，也包括模板友元的声明语句)，其他语句都不能出现默认实参。
@@ -76,6 +77,8 @@ void prints()
     ty2 ins = 58;
     cout << str << ins; 
 }
+// 错误，同一个文件中同一个参数的默认实参只能出现一次。
+template <class, class, int = 55> void prints();
 // 输出str 58
 prints();
 ```
