--- a/files/第5章_函数.md
+++ b/files/第5章_函数.md
@@ -383,12 +383,12 @@ string screen(sz ht = 24, sz wid = 80, char backgrnd = '');
 
 ```c++
 typedef string::size_type sz;
-string screen(sz ht = 24, sz wid = 80, char backgrnd = '');
-//表示高度和宽度的形参没有默认值
+string screen(sz ht, sz wid, char backgrnd);
+// 正确，表示高度和宽度的形参没有默认值
 string screen(sz, sz, char = '' );
-// 我们不能修改一个已经存在的默认值
+// 错误，我们不能修改一个已经存在的默认值
 string screen(sz, sz, char = '' ); // 错误：重复声明。
-// 但是可以按照如下形式添加默认实参：
+// 正确，可以按照如下形式添加默认实参：
 string screen (sz = 24, sz = 80, char); // 正确：添加默认
 ```
 
