--- a/files/第13章_分离式编译.md
+++ b/files/第13章_分离式编译.md
@@ -82,9 +82,9 @@ int main()
 
 2. 在编译阶段，编译器会独立地检查所有从程序代码转换而成的预处理文本文件`.i`，也就是只检查该文件中的代码，而不会考虑其他文件对其的影响。当某个预处理文本文件通过了编译检查时，编译器会将该文件里的所有代码翻译成一种能被汇编语言程序所识别的代码，所有翻译后的代码保存在一个汇编文本文件`.s`中。
    其中，有以下几点需要注意：
-   1. 编译器在进行编译检查时，如果我们使用了某个对象(包括普通函数、类的非类类型、类的非成员模板和模板实例)时，编译器会检查这些对象的声明是否在该作用域中存在：
+   1. 编译器在进行编译检查时，如果我们使用了某个对象(包括普通函数、类的非类类型成员、类的非成员模板成员和模板实例)时，编译器会检查这些对象的声明是否在该作用域中存在：
         * 对于声明存在但定义不存在的对象，编译器会在汇编文本文件`.s`中做一个标记，告诉之后的链接器在链接的时候去找该对象的定义，把问题移交给链接器，此时不会触发编译出错。
-        * 如果该对象的声明存在但与其定义不匹配，或者该对象有多个不匹配的声明或者定义时，就会编译出错。
+        * 如果该对象的声明不存在，或者声明存在但与其定义不匹配，或者该对象有多个不匹配的声明或定义时，就会编译出错。
    2. 但是当我们在不符合不完全类型的使用情形时使用了某类型(包括类类型和类模板)，则编译器不仅会检查其声明，还会检查是否存在对应的定义，否则编译出错。
    3. 对于模板来说，模板的实例化只会在编译阶段进行，生成的实例(也就是实例定义)包含以下部分：
       * 对于类模板来说：
