--- a/files/第5章_函数.md
+++ b/files/第5章_函数.md
@@ -924,6 +924,46 @@ Record lookup (const Account*); //新函数，作用于指向常量的指针。
 
 二义性调用：有多于一个函数可以匹配，但是每一个都不是明显的最佳选择。此时编译器发出二义性调用的错误信息。
 
+> 要注意函数匹配是在编译阶段进行的，只要代码中出现了某个函数的调用，编译器在编译时就会开始对该函数进行函数匹配。只有找到了最佳匹配才会通过编译，否则终止编译，输出错误信息。
+
+```c++
+#include <iostream>
+#include <string>
+#include <type_traits>
+
+template<class T>
+std::string sprints(const T& arg)
+{
+    std::string str;
+    // T类型与char*相等时
+    if (std::is_same<typename std::decay<T>::type, char*>::value)
+        str = arg;
+    else
+        str = std::to_string(arg);
+    return str;
+}
+
+int main(int argc, char **argv)
+{
+    /* 编译会出错，因为编译器在编译阶段进行sprints函数的函数匹配。
+     * 模板生成的sprints实例是std::string sprints(const char*(&arg));
+     * ，而std::to_string函数没有std::to_string(const char*)的重载函数
+     * 因此会输出匹配不到的编译错误信息，正确方法是新建一个std::to_string(const char*)的重载函数，如下：
+        namespace std
+        {
+        std::string to_string(const char*)
+        {
+            return std::string("error!");
+        }
+        } // End namespace std
+     * 这样才会编译通过。终端输出strings
+     */
+    const std::string &str = sprints("strings");
+    std::cout << str << std::endl;
+    return 0;
+}
+```
+
 ##### 5.521 编译器寻找重载函数的过程
 
 和变量一样，编译器寻找重载函数的顺序为：
