--- a/files/第6章_动态内存管理.md
+++ b/files/第6章_动态内存管理.md
@@ -440,7 +440,10 @@ delete pi2; //正确：释放一个空指针总是没有错
 `auto`不能用于数组类型。
 
 和数组不一样的是：
-类型修饰符`[ ]`内的容量大小不能省略，但可以用空圆/花括号来值初始化。
+类型修饰符`[ ]`内的==容量大小不能省略==。
+
+和数组一样的是：
+可以用空圆/花括号来值初始化。
 
 > `new[ ]`表达式的初始化规则与`new`表达式一样。
 
