--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -1153,7 +1153,7 @@ cout << obj3.ob;
 
 > 同一个类模板可以有多个不同的部分特例化。
 
-部分特例化是另一种特例化方法，我们可以在特例化时只指定一部分模板形参的实参，或者只指定模板类型形参的一部分而非直接提供一个具体的实参(比如指定成其类型的引用、指针或者常量类型等等)，或者是类型模板参数包的扩展模式包含其他关键字。
+部分特例化是另一种特例化方法，我们可以在特例化时只指定一部分模板形参的实参，或者只指定模板类型形参的一部分而非直接提供一个具体的实参(比如指定成其类型的引用、指针或者常量类型等等，比如`T*`、`&&T`、`T[]`、`T(&)[]`这样)，或者是类型模板参数包的扩展模式包含其他关键字。
 
 > 只有模板类型形参才可以指定一部分(当然也可以全部指定，也就是提供具体的实参)，指定其他非参数包类型的模板形参时必须要提供具体的实参。
 
