--- a/files/第2章_基本类型与变量.md
+++ b/files/第2章_基本类型与变量.md
@@ -365,7 +365,7 @@ C++11新标准规定了可以用花括号來初始化变量
 ，这种初始化的形式被称为列表初始化(list initialization)。列表初始化是利用花括号，把一个或多个初始值放在一起的初始化形式。
 现在，无论是初始化对象还是某些时候为对象赋新值，都可以使用这样由*花括号括起来*的初始值了
 
-当用于内置类型的变量时，列表初始化有个重要特点：如果我们使用列表初始化且初始值存在丢失信息的风险，则编译器将报错：
+当用于内置类型的变量时，列表初始化有个重要特点：如果我们使用列表初始化且初始值存在丢失信息的风险，则编译器将报错（或者报警）：
 
 ```c++
 long double ld = 3.1415926536;
@@ -409,7 +409,7 @@ int ins3 = {5};
 
 值初始化一般出现在类类型的初始化过程中，也可以说是某些类类型的默认初始化。
 
-值初始化就是当某变量初始化时没有指定初值，如果该变量为算术类型或者复合类型时，则该变量的值自动设为0，空或者其内部的元素也被值初始化的一种(根据该变量的类型决定)；如果该变量为类类型，则其执行默认初始化。
+值初始化就是当某变量初始化时没有指定初值，如果该变量为*算术类型或者复合类型*时，则该变量的值*自动设为0，空或者其内部的元素也被值初始化的一种*(根据该变量的类型决定)；如果该变量为*类类型*，则其执行*默认初始化*。
 
 ##### 2.213 变量的声明
 
