--- a/files/第5章_函数.md
+++ b/files/第5章_函数.md
@@ -73,6 +73,8 @@ auto prints(double val, int val2) -> decltype(val + val2);
 返回类型、函数名字和形参表共同形成了一个部分，叫做函数首部。
 所以一个函数声明也就是声明了一个函数首部。一个函数首部说明了调用该函数所需的全部信息，不同的函数的函数首部都是独一无二的。
 
+> **注意**：函数首部的==形参不能用constexpr进行修饰==，constexpr只能用于函数或者非形参或静态数据成员变量的声明与定义。
+
 要注意函数的声明要与其定义一致，就是函数首部要一致(包括函数声明或定义前的类型限定符也要一致)：
 * 函数名要相同。
 * 返回类型(可以忽略顶层const)要相同。
@@ -605,18 +607,23 @@ void print(int (&arr)[10])
 {
     for (auto elem : arr)cout << elem << endl;
 }
-//错误：必须要指定维度的大小
+//错误：虽然能编译通过，但是arr不能接收数组，因为没指定维度的大小
 void print2(int (&arr)[])
 {
     for (auto elem : arr)cout << elem << endl;
 }
-```
-```c++
+
 int i = 0, j[2] = {0, 1};
 int k[10] = {0,1,2,3,4,5,6,7,8,9};
 print(&i); //错误：实参不是含有10个整數的数组。
 print(j); //错误：实参不是含有10个整数的数组。
 print(k); //正确：实参是含有10个整数的。
+/**
+  以下都错误：因为print2不能接受数组。
+*/
+print2(&i); 
+print2(j);
+print2(k);
 ```
 
 ##### 5.343 函数形参
