--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -553,6 +553,8 @@ double Cls::dou = 78.6;
 * 非静态数据成员
 * 静态数据成员
 
+> **注意**：非静态数据成员不能为constexpr类型，否则编译器报错
+
 > 对于非静态数据成员和静态constexpr数据成员来说，只能在类内定义；
 > 而除了静态constexpr数据成员，其他静态数据成员类内类外都能定义，但大多数都在类外定义。
 
