--- a/files/第2章_基本类型与变量3.md
+++ b/files/第2章_基本类型与变量3.md
@@ -166,11 +166,12 @@ constexpr int cstexpr_ins4 = (ins + 15, 6);
 ```
 
 常量和常量表达式的概念不一样：
-* 常量是指字面值和由const或constexpr类型说明符修饰的变量。
-* 常量表达式是指
-  * 满足常量表达式条件的表达式。
+* 常量是指字面值或者由const或constexpr类型说明符修饰的变量。
+* 满足以下任意一种情况才为常量表达式：
+  * 满足常量表达式情况的式子。
   * 字面值。
-  * 由const或constexpr类型说明符修饰的变量，且该变量的初始值也是常量表达式。
+  * 由const类型说明符修饰的变量，且该变量的初始值也是常量表达式。
+  * 由constexpr类型说明符修饰的已初始化的变量。
 
 > 所以可知==常量不一定是常量表达式，但常量表达式一定是常量==。
 
@@ -191,7 +192,7 @@ C++11新标准规定，允许将变量声明为constexpr类型以便由编译器
 
 ###### 2.5221 constexpr变量的定义和初始化
 
-声明为constexpr的变量的类型一定要是字面值类型，而且必须用常量表达式初始化，所以==constexpr变量一定是常量表达式==。
+声明为constexpr的变量的类型一定要是字面值类型，而且**必须用常量表达式初始化**，所以==constexpr变量一定是常量表达式==。
 
 和const变量一样，==定义的constexpr变量也必须显式初始化==，且constexpr变量不能用extern只声明而不定义。
 
@@ -209,8 +210,8 @@ constexpr int *q = nullptr; // q是一个指向整数的常量指针
 ```
 
 > 尽管指针和引用都能定义成constexpr，但它们的初始值却受到严格限制。
-> 一个constexpr指针的初始值必须是空指针，或者是非动态存储区的对象。
-> constexpr引用也是一样，只能绑定非动态存储区的对象。
+> 一个constexpr指针的初始值必须是空指针，或者是非栈区的对象。
+> constexpr引用也是一样，只能绑定非栈区的对象。
 
 ###### 2.5222 字面值类型简述
 
