--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -3758,6 +3758,38 @@ constexpr Cls obj = ret();
 声明形式为：
 > constexpr 构造函数的声明语句
 
+只有声明为`constexpr`的构造函数才能用于对应字面值类型的常量表达式构造，字面值类型中的普通构造函数不能用于常量表达式的构造。
+
+```c++
+#include <iostream>
+
+// 字面值常量类
+struct Base
+{
+    // constexpr构造函数，可用于常量表达式的构造
+    constexpr Base(const int& val) {}
+    // 非constexpr构造函数，不能用于常量表达式的构造
+    Base(const double& val) { std::cout << "no constexpr\n"; }
+};
+
+int main()
+{
+    // 正确：constexpr构造函数可用于非常量的构造
+    Base ba1{48};
+    // 正确：constexpr构造函数可用于常量的构造
+    const Base cba1{48};
+    // 正确：constexpr构造函数可用于常量表达式的构造
+    constexpr Base ceba1{48};
+    // 正确：非constexpr构造函数可用于非常量的构造
+    Base ba2{48.48};
+    // 正确：非constexpr构造函数可用于常量的构造
+    const Base cba2{48.48};
+    // 错误：非constexpr构造函数不能用于常量的构造
+    constexpr Base ceba2{48.48};
+    return 0;
+}
+```
+
 `constexpr`构造函数必须要在其初始值列表中显式初始化所有没有类内初始值的非静态数据成员(如果该类有继承关系时，要显式调用其所有虚基类以及直接基类的构造函数来初始化其继承的没有类内初始值的非静态数据成员)。
 
 不管是`constexpr`构造函数的初始值列表中的初始值还是类内初始值，字面值常量类的每个非静态数据成员(包括继承的成员)的初始值只有两种选择：
