--- a/files/第2章_基本类型与变量3.md
+++ b/files/第2章_基本类型与变量3.md
@@ -343,7 +343,7 @@ const auto &j = 42; //正确：可以为常量引用绑定字面值
 有时会遇到这种情况：希望从表达式的类型推断出要定义的变量的类型，但是不想用该表达式的值初始化变量。
 此时可以用decltype类型说明符，它的作用是返回非声明或定义形式的表达式(右值)的操作数的数据类型
 
-> decltype类型说明符的括号内只能放表达式，不能含有类型名。
+> decltype类型说明符的括号内只能放表达式，不能含有类型名，也不能含有auto，像`decltype(auto)`是不行的。
 
 decltype类型的声明形式为：
 > (可含类型修饰符)decltype(表达式) 变量名 (可选 初始化)
