--- a/files/第6章_动态内存管理.md
+++ b/files/第6章_动态内存管理.md
@@ -614,19 +614,19 @@ cout << dou << " " << *dp;
 //这些版本可能抛出异常
 void *operator new(size_t);
 void *operator new[](size_t); 
-void *operator delete(void*) noexcept;
-void *operator delete[](void*) noexcept;
+void operator delete(void*) noexcept;
+void operator delete[](void*) noexcept;
 
 //这些版本承诺不会抛出异常
 void *operator new(size_t, nothrow_t&) noexcept; 
 void *operator new[](size_t, nothrow_t&) noexcept; 
-void *operator delete(void*, nothrow_t&) noexcept;
-void *operator delete[](void*, nothrow_t&) noexcept;
+void operator delete(void*, nothrow_t&) noexcept;
+void operator delete[](void*, nothrow_t&) noexcept;
 ```
 
 * 对于可重载的所有运算符函数来说：
   1. 类型`nothrow_t`是定义在`new`头文件中的一个`struct`,在这个类型中不包含任何成员。
-        > `new`头文件还定义了一个名为`nothrow`的`const`对象，用户可以通过这个对象请求`new`的非抛出版本。
+        > `new`头文件还定义了一个类型为`nothrow_t`，名为`nothrow`的`const`对象，用户可以通过这个对象请求`new`的非抛出版本。
   2. 当我们将上述运算符函数定义成类的成员时，它们是**隐式静态**的。我们无须显式地声明static，当然这么做也不会引发错误。
 
 * 对于`new`运算符函数来说：
