--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -3545,21 +3545,154 @@ delete ptr;
 
 ### 7.95 拷贝控制成员的合成版本
 
-和普通构造函数一样，所有的拷贝控制成员都有编译器自动合成的版本，也分为隐式合成和显式合成。
-各个拷贝控制成员的合成版本的函数体都为空。
+和默认构造函数一样，所有的拷贝控制成员都有编译器自动合成的版本，也分为隐式合成和显式合成。
 
-以下为各个拷贝控制成员的函数声明，假设类名为`Cls`：
+所有拷贝控制成员的合成版本都有如下特性：
+1. 所有非析构函数的拷贝控制成员的合成版本会自动把赋值对象的每个非静态数据成员赋值到被赋值对象对应的成员中。
+2. 析构函数不管是不是合成版本，其都会在该对象销毁时自动调用非静态数据成员自己的析构函数。
+3. 函数体为空。
+4. 如果其类型为字面值类型，则合成版本的构造函数成员都为constexpr函数，其他合成的拷贝控制成员则不为constexpr函数。
+
+以下为各个拷贝控制成员的函数声明，假设类名为`Cls`，且含有某些非静态数据成员，则其合成的拷贝成员的定义一般如下所示：
 ```c++
-// 合成的拷贝构造函数
-Cls(const Cls&);
-// 合成的移动构造函数
-Cls(Cls&&);
-// 合成的拷贝赋值运算符
-Cls& operator=(const Cls&);
-// 合成的移动赋值运算符
-Cls& operator=(Cls&&);
-// 合成的析构函数
-~Cls();
+#include <string>
+// 假设Cls的成员结构如下
+class Cls
+{
+    static constexpr int kIns = 48;
+    int ins_;
+    double dou_;
+    std::string str_;
+
+    /**
+     *  以下为编译器可能会合成的拷贝成员版本的定义
+     *  // 合成的拷贝构造函数
+     *  Cls(const Cls& obj): ins_(obj.ins_), dou_(obj.dou_), str_(obj.str_) {}
+     *  // 合成的移动构造函数
+     *  Cls(Cls&& obj): ins_(obj.ins_), dou_(obj.dou_), str_(obj.str_) {}
+     *  // 合成的拷贝赋值运算符
+     *  Cls& operator=(const Cls& obj): ins_(obj.ins_), dou_(obj.dou_), str_(obj.str_) {}
+     *  // 合成的移动赋值运算符
+     *  Cls& operator=(Cls&& obj): ins_(obj.ins_), dou_(obj.dou_), str_(obj.str_) {}
+     *  // 合成的析构函数
+     *  ~Cls() {}
+     * 
+     */
+};
+```
+
+以下为合成拷贝控制成员的特性例子：
+```c++
+// 自定义的delete运算符函数
+void operator delete(void * ptr) noexcept
+{
+    std::cout << "内存已释放\n";
+}
+
+// 含有动态内存分配的非静态数据成员
+struct Cls
+{
+    double *pDou_ = new double{-12.55};
+    ~Cls() { delete pDou_; }
+};
+
+class Base
+{
+    int ins_;
+    double dou_;
+    // 含有动态内存分配的非静态数据成员
+    Cls obj;
+public:
+    // 输出非静态成员
+    void prints() const
+    {
+        std::cout << ins_ << std::endl;
+        std::cout << dou_ << std::endl << std::endl;
+    }
+    // 默认构造函数
+    Base(): ins_(5), dou_(-8.2) {}
+    // 构造函数
+    Base(int ins, double dou): ins_(ins), dou_(dou) { std::cout << "调用普通构造函数\n"; }
+    // 合成的拷贝构造函数
+    Base(const Base&) = default;
+    // 移动构造函数
+    Base(Base&&) { std::cout << "调用移动构造函数\n"; }
+    // 拷贝赋值运算符函数
+    Base& operator=(const Base&)
+    {
+        std::cout << "调用拷贝赋值运算符函数\n";
+        return *this;
+    }
+    // 移动赋值运算符函数
+    Base& operator=(Base&&) = default;
+    // 析构函数
+    ~Base() { std::cout << "调用析构函数\n"; }
+};
+
+int main()
+{
+    // 由Base(int, double)构造
+    Base obj(48,15.66);
+    obj.prints();
+    // 由合成的Base(const Base&)构造，非静态数据成员值与obj一样。
+    Base obj2{obj};
+    obj2.prints();
+    // 由Base(Base&&)构造，非静态数据成员值未初始化。
+    Base obj3{std::move(obj2)};
+    obj3.prints();
+    // 由Base(int, double)构造
+    Base obj4(230,0.55);
+    // 由Base& operator=(const Base&)构造，非静态数据成员值未初始化。
+    obj = obj2;
+    obj.prints();
+    // 由合成的Base& operator=(Base&&)构造，非静态数据成员值与obj4一样。
+    obj2 = std::move(obj4);
+    obj2.prints();
+    // 不管是不是合成版本的析构函数，结束时该析构函数会自动调用非静态数据成员自己的析构函数。
+    return 0;
+}
+```
+```c++
+// 字面值类型Base，可以在使用常量表达式的地方调用。
+class Base
+{
+    int ins_;
+    double dou_;
+public:
+    // 输出非静态成员
+    void prints() const
+    {
+        std::cout << ins_ << std::endl;
+        std::cout << dou_ << std::endl << std::endl;
+    }
+    // 默认构造函数
+    constexpr Base(): ins_(5), dou_(-8.2) {}
+    // 构造函数
+    constexpr Base(int ins, double dou): ins_(ins), dou_(dou) {}
+};
+
+int main()
+{
+    // 由constexpr Base(int, double)构造，可以在使用常量表达式的地方调用。
+    constexpr Base obj(48,15.66);
+    obj.prints();
+    // 由合成的constexpr Base(const Base&)构造，可以在使用常量表达式的地方调用。
+    constexpr Base obj2{obj};
+    obj2.prints();
+    // 由合成的constexpr Base(Base&&)构造，可以在使用常量表达式的地方调用。
+    constexpr Base obj3{std::move(obj2)};
+    obj3.prints();
+    // obj4不为常量表达式
+    Base obj4(230,0.55);
+    // 由合成的Base& operator=(const Base&)构造，不可以在使用常量表达式的地方调用。
+    obj4 = obj;
+    obj4.prints();
+    // obj5为常量表达式
+    constexpr Base obj5(10,0.75);
+    // 错误：合成的Base& operator=(const Base&)不能在使用常量表达式的地方调用。
+    obj5 = obj;
+    return 0;
+}
 ```
 
 #### 7.951 隐式合成版本
