--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -3469,7 +3469,7 @@ Cls::~Cls() {};
 和构造函数不一样的是，在一个析构函数中，不存在类似初始化列表的东西来控制每个成员的销毁方式，成员的销毁是隐式的，析构函数会自动调用对应成员自己的析构函数来执行销毁的。
 内置类型没有析构函数，因此对于系统内置类型的成员来说，销毁该成员什么也不需要做。
 
-> 所以隐式销毁一个指向动态内存的普通指针的成员是不会自动销毁它所指向的对象的。
+> 所以析构函数对于一个指向动态内存的普通指针成员，是不会自动销毁该指针成员所指向的对象的。
 
 析构函数的执行顺序为：
 1. 先执行函数体。
