--- a/files/第2章_基本类型与变量3.md
+++ b/files/第2章_基本类型与变量3.md
@@ -355,13 +355,13 @@ decltype(f()) sum = x; // sum的类型就是函数f的返回类型。
 当decltype的括号内是一个单一变量时，则decltype返回该变量的类型(包括顶层const和引用在内)：
 
 ```c++
-const int ci = 0, &cj 
-decltype(ci) x = 0;
-decltype(cj) y = x; 
-decltype(cj) z;
+const int ci = 0, &cj = 1;
 // x的类型是const int
+decltype(ci) x = 0;
 // y的类型是const int&, y绑定到变量x 
-//错误：z是一个引用，必须初始化
+decltype(cj) y = x;
+// 错误：z是一个引用，必须初始化
+decltype(cj) z;
 ```
 
 如果decltype的括号内是一个复杂表达式，那么decltype返回该表达式结果会有一些不同：
@@ -379,7 +379,7 @@ decltype (*p) c; //错误：c是int&,必须初始化
 
 ```c++
 // decltype的表达式如果是加上了括号的变量，结果将是引用
-//错误：d1，d2是int&,必须初始化
+// 错误：d1，d2是int&,必须初始化
 decltype((i)) d1;
 decltype(((i))) d2; 
 decltype(i) e; //正确：e是一个(未初始化的)int。
