--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -58,11 +58,56 @@ struct Cls { ty data_mem; void prints() { cout << data_mem << " " << int_par << 
 > 函数模板支持重载，只要该模板的模板形参表或者函数形参表不一致就行。
 > 类模板不支持重载，所以类名相同但模板形参表不同的模板会导致重复定义；而且同作用域下的类模板名也不能与其他的类类型同名。
 
-和函数形参一样，非参数包的模板形参和函数模板中的非参数包的函数形参都可以有默认实参，它们的规则大部分与普通默认实参的规则一样(比如默认模板实参要放在形参表末尾等)，只有以下的区别：
+和函数形参一样，非参数包的模板形参和函数模板中的非参数包的函数形参都可以有默认实参，它们的规则大部分与普通默认实参的规则一样(比如默认实参要放在形参表末尾等)，只有以下的区别：
 * 对于模板形参的默认实参来说：
+  同一个模板中，==前面的模板形参可以作为后面模板形参的默认实参==。
   一个模板的声明(包括模板友元的声明语句)和定义如果不在同一个文件中，则可以对同一个模板形参有不同的默认实参，但是该模板形参的默认实参只会按照该形参第一个出现的默认实参来决定。
-  如果在同一个文件中，则默认实参只能在该模板第一次出现的语句中(声明或定义语句都可以，也包括模板友元的声明语句)，其他语句都不能出现默认实参。
-  同一模板中，==前面的模板形参可以作为后面模板形参的默认实参==。
+  如果在同一个文件中，则有以下特性：
+  1. 对于函数模板来说，默认实参只能在该模板第一次出现的语句中(声明或定义语句都可以，也包括模板友元的声明语句)，其他语句出现的默认实参无效。
+     ```c++
+     #include <iostream>
+     // Prints第一次出现的语句，声明语句，T2带有默认实参
+     template<typename T, typename T2 = T>
+     void Prints(const T& obj);
+     // Prints的定义语句
+     template<typename T, typename T2>
+     void Prints(const T& obj)
+     {
+        std::cout << obj << std::endl;
+     }
+     // Prints2第一次出现的语句，声明语句，没有默认实参
+     template<typename T, typename T2>
+     void Prints2(const T& obj);
+     // Prints的定义语句，T1，T2带有默认实参，但因为函数模板的默认实参只能在该模板第一次出现的语句中，所以模板实参推断无效
+     template<typename T = int32_t, typename T2 = int32_t>
+     void Prints2(const T& obj)
+     {
+        std::cout << obj << std::endl;
+     }
+     int main()
+     {
+        // 调用正确，T被模板实参推断为int
+        Prints(1548);
+        // 调用错误，T2的默认实参无效，模板实参推断无效。
+        Prints2(1548, 887);
+        return 0;
+     }
+     ```
+  2. 对于类模板来说，默认实参可以出现在任意的声明或定义语句中（包括模板友元的声明语句），只要遵循默认实参放在形参表末尾且同一形参没有多个默认实参的规则就行。
+     ```c++
+     // Cls声明语句，没有默认实参
+     template<typename T, typename T2>
+     class Cls;
+     // Cls定义语句，T2带有默认实参
+     template<typename T, typename T2 = T>
+     class Cls{};
+
+     int main()
+     {
+         // 调用正确，T2被默认实参指定为int32_t
+         Cls<int32_t> cls;
+     }
+     ```
 * 对于函数形参的默认实参来说：
   不能像普通函数一样可以用多个声明来添加默认实参。
   默认实参只能在该模板第一次出现的语句中(声明或定义语句都可以，也包括模板友元的声明语句)，其他语句都不能出现默认实参。
