--- a/files/第5章_函数.md
+++ b/files/第5章_函数.md
@@ -877,6 +877,7 @@ print(begin(j), end(j)); // 调用print(const int*, const int*)
 * 返回类型不同
 * 类型别名形参
 * 顶层const形参
+* constexpr修饰符
 
 ##### 5.511 形参名不同
 
@@ -884,8 +885,8 @@ print(begin(j), end(j)); // 调用print(const int*, const int*)
 
 ```c++
 //每对声明的是同一个函数
-Record lookup(const Account &acct);
-Record lookup (const Accounts); // 省略了形参的名字
+Record lookup(const Account &acct) {}
+Record lookup (const Accounts) {} // 省略了形参的名字
 ```
 
 ##### 5.512 返回类型不同
@@ -893,8 +894,8 @@ Record lookup (const Accounts); // 省略了形参的名字
 要注意如果两个函数除了返回类型外，其他所有的要素都相同的，那么是属于同一个函数，会导致重复定义。
 
 ```c++
-Record lookup(const Accounts);
-bool lookup (const Account&); //错误：与上一个函数相比只有返回类型不同
+Record lookup(const Accounts) {}
+bool lookup (const Account&) {} //错误：与上一个函数相比只有返回类型不同
 ```
 
 ##### 5.513 类型别名形参
@@ -903,20 +904,20 @@ bool lookup (const Account&); //错误：与上一个函数相比只有返回类
 
 ```c++
 typedef Phone Telno;
-Record lookup(const Phone&);
-Record lookup (const Telno&); // Telno和Phone的类型相同。
+Record lookup(const Phone&) {}
+Record lookup (const Telno&) {} // Telno和Phone的类型相同。
 ```
 
-##### 5.513 顶层const形参
+##### 5.514 顶层const形参
 
 一个拥有顶层const的形参无法和另一个没有顶层const的形参区分开来。
 
 ```c++
-Record lookup(Phone);  
-Record lookup (const Phone); // 重复声明了Record lookup(Phone)
+Record lookup(Phone) {}
+Record lookup (const Phone) {} // 重复声明了Record lookup(Phone)
 
-Record lookup(Phone*);
-Record lookup (Phone* const); // 重复声明了Record lookup(Phone*)
+Record lookup(Phone*) {}
+Record lookup (Phone* const) {} // 重复声明了Record lookup(Phone*)
 ```
 
 > 但是如果形参是底层const，则可以实现函数重载。
@@ -925,10 +926,22 @@ Record lookup (Phone* const); // 重复声明了Record lookup(Phone*)
 //对于接受引用或指针的函数来说，\
 对象是常量还是非常量对应的形参不同
 //定义了4个独立的重载函数
-Record lookup (Account&); //函数作用于Account的引用。
-Record lookup (const Account&); // 新函数，作用于常量引用
-Record lookup (Account*); // 新函数，作用于指向Account的指针。
-Record lookup (const Account*); //新函数，作用于指向常量的指针。
+Record lookup (Account&) {} //函数作用于Account的引用。
+Record lookup (const Account&) {} // 新函数，作用于常量引用
+Record lookup (Account*) {} // 新函数，作用于指向Account的指针。
+Record lookup (const Account*) {} //新函数，作用于指向常量的指针。
+```
+
+##### 5.515 constexpr修饰符
+
+两个函数的定义只有constexpr修饰符不同会被认定为重复定义。
+
+```c++
+// constexpr函数
+constexpr int GetInt(int obj) {}
+// 普通函数，但constexpr函数与其重复定义
+// 会编译错误
+int GetInt(int obj) {}
 ```
 
 #### 5.52 函数匹配
