--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -434,10 +434,10 @@ Cls<15,8,123,25,8> obj;
 
 所以这样会出现一些问题：
 之前我们介绍过我们可以用作用域运算符`::`来访问一个类类型的静态成员或者类类型成员。
-因为编译器不会在模板定义时去确认成员，所以默认情况下，编译器会认为通过作用域运算符访问的成员为静态成员，所以为了能够访问类类型成员，我们就要显式指定访问的是类类型成员。
+但对于模板来说，编译器不会在模板定义时去检查含有模板参数的表达式。默认情况下，编译器会认为含有模板参数的表达式使用作用域运算符所访问的成员为静态成员（非类类型成员），所以为了能够访问类类型成员，我们就要显式指定访问的是类类型成员。
 
 我们通过使用关键字`typename`来实现显式访问类类型成员，使用形式为：
-> typename 模板类型形参名(或模板类形参实例)::类类型成员名
+> typename 含有模板参数的表达式::类类型成员名
 
 `typename`要紧跟在该模板类型形参名或模板类形参实例后面，所以static等修饰限定符要放在`typename`之前。
 
