--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -1055,22 +1055,49 @@ int main()
 模板的隐式实例化声明类似于隐式实例化，也就是该模板中的所有模板形参都含有模板实参的声明形式（所以如果有显式实参表，则其中不能含有任何模板形参）。
 对于类模板来说，就是其类关键字加上使用显式实参表的形式；对于函数模板来说，是显式实参表或者实参推断的形式的函数声明形式(也就是含有返回类型和函数形参表的函数声明，其中所有模板形参的类型都换为该形参的实参)。
 
+> 如果原模版的某些模板形参含有默认实参，则显式实例化时的显式实参表可以忽略该参数的填写，其他地方要填写，且类型要和该默认实参一样。
+
+> **注意**：显式实例化的声明和定义中不能含有constexpr，inline等修饰符，也就是原模版有的这些修饰符不要出现在对应的显式实例化中。
+
 ```c++
+#include <string>
+
 // 函数模板prints
 template <typename ty, int val, class ty2>
-ty prints(ty2 v1, int multiple = val) {}
-// 类模板Cls
-template <typename ty, class ty2, int val>
+ty prints(ty2 v1, int multiple = val) { return ty{}; }
+// 函数模板prints2，含有constexpr
+template <typename ty>
+constexpr ty prints2(ty v1) { return ty{}; }
+// 函数模板print3，含有inline，val含有默认实参
+template <typename ty, int val = 10>
+inline ty prints3(ty v1[val]) { return ty{}; }
+// 类模板Cls，ty2含有默认实参
+template <typename ty, int val, class ty2 = int>
 struct Cls {};
 
-// 函数模板prints的显式实例化定义
-template int prints<int, 8, double>(double, int);
 // 函数模板prints的显式实例化声明
 extern template int prints<int, 8, double>(double, int);
-// 类模板Cls的显式实例化定义
-template struct Cls<string, int, 48>;
+// 函数模板prints的显式实例化定义
+template int prints<int, 8, double>(double, int);
+
+// 函数模板prints2的显式实例化声明
+extern template float prints2<float>(float);
+// 函数模板prints2的显式实例化定义
+template float prints2<float>(float);
+
+// 函数模板prints3的显式实例化声明
+// 因为val含有默认实参，所以显式实参表省略了val，但其他地方还是要填该默认实参值
+extern template const char prints3<const char>(const char[10]);
+// 函数模板prints3的显式实例化定义
+// 因为val含有默认实参，所以显式实参表省略了val，但其他地方还是要填该默认实参值
+template const char prints3<const char>(const char[10]);
+
 // 类模板Cls的显式实例化声明
-extern template struct Cls<string, int, 48>;
+// 因为ty2含有默认实参，所以显式实参表省略了val。
+extern template struct Cls<std::string, 48>;
+// 类模板Cls的显式实例化定义
+// 因为ty2含有默认实参，所以显式实参表省略了val。
+template struct Cls<std::string, 48>;
 ```
 
 显式实例化的声明和定义要与对应的模板的声明一致。
@@ -1493,21 +1520,52 @@ struct Cls
 与往常一样，当我们在类模板外定义一个成员时，也必须说明该成员属于哪个模板类型。因此需要在类外定义语句的成员名之前加上模板类型和作用域运算符`::`。
 因为类模板外定义不在模板的作用域中，所以使用该模板类型时必须要提供模板实参表，且该模板实参表的实参要与该成员的模板形参表中的形参一模一样(不能是具体的实参或者形参的特性)。
 
+> 使用了模板参数的模板成员在类外定义时可以直接在模板形参表之后使用该模板参数的标识符。
+
 ```c++
+#include <iostream>
+#include <string>
+
 template <class ty, int val, typename = int>
 struct Cls
 {
-    // 类模板成员prints的类内声明
-    void prints();
+    // 静态数据成员类内声明，使用了模板参数
+    static const ty mem;
+    // 静态数据成员类内声明
+    static double dou;
+    // 非静态函数成员类内声明
+    void empty(int value);
+    // 非静态常量函数成员类内声明，使用了模板参数
+    int add(ty val1, int val2) const;
+    // 静态constexpr函数成员类内声明，使用了模板参数
+    static constexpr ty prints();
 };
-// 类模板成员prints的类外定义
+
+// 类模板静态数据成员的类外定义
+// 可以直接在模板形参表之后使用模板参数的标识符。
 template <typename t, int v, class t2>
-void Cls<t, v, t2>::prints() { cout << "external"; }
+const t Cls<t, v, t2>::mem = t{};
+// 类模板静态数据成员的类外定义
+template <typename t2, int v2, class t22>
+double Cls<t2, v2, t22>::dou = 3.14;
+// 类模板非静态函数成员的类外定义
+template <typename t, int v, class t2>
+void Cls<t, v, t2>::empty(int) {}
+// 类模板非静态常量函数成员的类外定义
+// 可以直接在模板形参表之后使用模板参数的标识符。
+template <typename t, int v, class t2>
+int Cls<t, v, t2>::add(t, int) const { std::cout << "external add\n"; return 1; }
+// 类模板静态constexpr函数成员的类外定义
+// 可以直接在模板形参表之后使用模板参数的标识符。
+template <typename t, int v, class t2>
+constexpr t Cls<t, v, t2>::prints() { std::cout << "external print\n"; return t{}; }
 
 int main()
 {
-    Cls<string, 105> ob;
-    // 输出external
+    Cls<std::string, 105> ob;
+    // 输出external add
+    ob.add("string", 0);
+    // 输出external print
     ob.prints();
     return 0;
 }
