--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -507,22 +507,30 @@ int Cls::staticFuncAccessed_viaClassObject_byStaticData{classObj.getInt_st()*3};
 ```c++
 struct Cls
 {
+    // 静态数据成员const int类内定义
     static const int ins = 18;
+    // 静态数据成员类内声明
+    static const float flo;
+    // 静态数据成员constexpr类内定义（只能在类内定义）
+    static constexpr double sta_dou = -48.35;
+    // 静态数据成员类内声明
     static double dou;
+    // 非静态函数成员类内声明
     int add(int val, int val2);
+    // 静态函数成员类内声明
     static void prints();
 };
-// 正确的类成员定义
-const int Cls::ins;
+// 正确的静态数据成员定义
+const float Cls::flo = 48.5;
 // 错误定义：没有类名和作用域运算符，该定义语句不是类成员的定义。
 double dou = 7.6;
-// 正确的类成员定义
+// 正确的静态数据成员定义
 double Cls::dou = 7.6;
 // 错误定义：没有类名和作用域运算符，该定义语句不是类成员的定义。
 int add(int val, int val2) {};
-// 正确的类成员定义
+// 正确的非静态函数成员定义
 int Cls::add(int val, int val2) {};
-// 正确的类成员定义
+// 正确的静态函数成员定义
 void Cls::prints() {}
 ```
 
