--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -1236,7 +1236,7 @@ public:
 ```
 
 类不能重用合成的默认、合成的拷贝和合成的移动构造函数，如果派生类没有直接定义这些构造函数，则编译器将为派生类合成它们，但可以重用这些非合成的版本。
-其中对于**非合成的拷贝和移动构造函数**，编译器会在派生类中**生成一个函数体相同，但函数名及形参表都为派生类名的构造函数**。
+其中对于**用户自定义的拷贝和移动构造函数和非系统自动合成的合成拷贝和移动构造函数**，编译器会在派生类中**生成一个函数体相同，但函数名及形参表都为派生类名的构造函数**。
 ```c++
 #include <iostream>
 // 直接基类
