--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -1235,17 +1235,29 @@ public:
 };
 ```
 
-类不能重用合成的默认、合成的拷贝和合成的移动构造函数，如果派生类没有直接定义这些构造函数，则编译器将为派生类合成它们，但可以重用这些非合成的版本。
-其中对于**用户自定义的拷贝和移动构造函数和非系统自动合成的合成拷贝和移动构造函数**，编译器会在派生类中**生成一个函数体相同，但函数名及形参表都为派生类名的构造函数**。
+类不能重用合成的（包括显式用`=default`指定的合成函数）默认、拷贝和移动构造函数，如果派生类没有直接定义这些构造函数，则编译器将为派生类合成它们。
+其中对于**用户自定义的拷贝和移动构造函数**，编译器会在派生类中**生成一个函数体相同，但函数名及形参表都为派生类名的构造函数**。
+
+> **注意**：任何构造函数如果满足了已删除的条件，则重用该构造函数失效，编译器将会生成对应构造函数的已删除版本。
+
 ```c++
 #include <iostream>
+
 // 直接基类
 class Base
 {
 public:
     Base() { std::cout << "default base" << std::endl; }
     Base(const Base&) { std::cout << "copy base" << std::endl; }
-    Base(Base&&) { std::cout << "move base" << std::endl; }
+    Base(Base&&) noexcept { std::cout << "move base" << std::endl; }
+};
+// 直接基类
+class Base2
+{
+public:
+    Base2() = default;
+    Base2(const Base2&) { std::cout << "copy base" << std::endl; }
+    Base2(Base2&&) = default;
 };
 
 class Derive: public Base
@@ -1260,12 +1272,28 @@ public:
     using Base::Base;
 };
 
+class Derive2: public Base2
+{
+public:
+    /*
+        不会生成任何构造函数
+    */
+    using Base2::Base2;
+    Derive2& operator=(Derive2&&) noexcept { std::cout << "move assignment" << std::endl; }
+};
+
 int main()
 {
     // 输出default base
     Derive d1;
     // 输出copy base
     Derive d2 = d1;
+    // 输出move base
+    Derive d3 = std::move(d1);
+    // 正常
+    Derive2 dd1;
+    // 错误，因为类自定义了移动赋值运算符，所以导致using不能重用拷贝构造函数，以及合成的拷贝构造函数为已删除。
+    Derive2 dd2 = dd1;
     return 0;
 }
 ```
